hphp/hack/test/typecheck/stricter_consts/trait_trait_1.bad.php.exp
File "trait_trait_1.bad.php", line 15, characters 7-8:
Some members in class `C` are incompatible with those declared in type `T1` (Typing[4374])
  File "trait_trait_1.bad.php", line 11, characters 13-13:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "trait_trait_1.bad.php", line 7, characters 13-13:
  `X` inherited from `T1`
  File "trait_trait_1.bad.php", line 11, characters 13-13:
  conflicts with constant `X` inherited from `T2`.
